--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>org.example.inventory/org.example.inventory.server.HelloApplication</mainClass>
+                            <mainClass>org.example.inventory/org.example.inventory.client.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
